[package]
name = "spylent"
version = "0.1.0"
authors = ["Joshua Maddux <josh@pkcsecurity.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
serde = "*"
serde_derive = "*"
serde_json = "*"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["tera_templates", "json"]

[[bin]]
name = "server"
path = "src/main.rs"
test = false
